[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/InteractiveObjects/Buttons&Doors/GroupBase.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Camera/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GUI/GUI.gd" type="Script" id=3]
[ext_resource path="res://Global/Background/Background.png" type="Texture" id=4]
[ext_resource path="res://Global/Tileset/LevelBase.tres" type="TileSet" id=5]
[ext_resource path="res://Global/Background/ProdLine.tscn" type="PackedScene" id=6]
[ext_resource path="res://Global/Background/Gears.png" type="Texture" id=7]
[ext_resource path="res://Global/Foreground/Cloud1.png" type="Texture" id=8]
[ext_resource path="res://Global/Foreground/Cloud2.png" type="Texture" id=9]
[ext_resource path="res://Global/Foreground/Cloud3.png" type="Texture" id=10]
[ext_resource path="res://Scenes/GUI/HUD/HUD.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Fog/CosmeticFog/magenta_FG_fog_shadermaterial.tres" type="Material" id=20]
[ext_resource path="res://Scenes/Fog/CosmeticFog/green_bg_fog_shadermaterial.tres" type="Material" id=21]
[ext_resource path="res://Scenes/Fog/CosmeticFog/FogNormalMap.tres" type="Texture" id=22]
[ext_resource path="res://Scenes/Fog/CosmeticFog/FogTexture.tres" type="Texture" id=23]
[ext_resource path="res://Scenes/Levels/Base/LevelBase.gd" type="Script" id=24]
[ext_resource path="res://Scenes/Levels/Chapter1/Music/Chapter1_Hard.ogg" type="AudioStream" id=25]
[ext_resource path="res://Scenes/Levels/Chapter1/Music/Music.gd" type="Script" id=26]
[ext_resource path="res://Scenes/Levels/Chapter1/Music/Chapter1_Medium.ogg" type="AudioStream" id=27]
[ext_resource path="res://Scenes/Levels/Chapter1/Music/Chapter1_Normal.ogg" type="AudioStream" id=28]

[sub_resource type="Animation" id=1]
resource_name = "Mouvement"
length = 80.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 40.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1300, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1300, 0 ) ]
}

[node name="LevelBase" type="Node2D"]
script = ExtResource( 24 )
__meta__ = {
"_edit_lock_": true
}

[node name="Foreground" type="CanvasLayer" parent="."]
layer = 2

[node name="Clouds" type="Node2D" parent="Foreground"]
__meta__ = {
"_edit_lock_": true
}

[node name="Cloud1" type="Position2D" parent="Foreground/Clouds"]
position = Vector2( 1033.34, 501.457 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Foreground/Clouds/Cloud1"]
modulate = Color( 1, 1, 1, 0.431373 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Foreground/Clouds/Cloud1/Sprite"]
autoplay = "Mouvement"
anims/Mouvement = SubResource( 1 )

[node name="Cloud2" type="Position2D" parent="Foreground/Clouds"]
position = Vector2( -105.822, 520.66 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Foreground/Clouds/Cloud2"]
modulate = Color( 1, 1, 1, 0.431373 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Foreground/Clouds/Cloud2/Sprite"]
autoplay = "Mouvement"
anims/Mouvement = SubResource( 2 )

[node name="Cloud3" type="Position2D" parent="Foreground/Clouds"]
position = Vector2( -192.048, 490.909 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Foreground/Clouds/Cloud3"]
modulate = Color( 1, 1, 1, 0.431373 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Foreground/Clouds/Cloud3/Sprite"]
autoplay = "Mouvement"

[node name="TurnCloudL" type="Position2D" parent="Foreground/Clouds"]
position = Vector2( 22.5517, 500.643 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Foreground/Clouds/TurnCloudL"]
modulate = Color( 1, 1, 1, 0.313726 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="TurnCloudR" type="Position2D" parent="Foreground/Clouds"]
position = Vector2( 923.552, 500.643 )
rotation = -3.14159
scale = Vector2( 1, -1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Foreground/Clouds/TurnCloudR"]
modulate = Color( 1, 1, 1, 0.313726 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Fog" type="Node2D" parent="Foreground"]
__meta__ = {
"_edit_lock_": true
}

[node name="Fog" type="Sprite" parent="Foreground/Fog"]
material = ExtResource( 20 )
position = Vector2( 470.01, 277.517 )
scale = Vector2( 2.09202, 1.27633 )
texture = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[node name="GUI" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 3 )

[node name="Popups" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HUD" parent="GUI" instance=ExtResource( 19 )]

[node name="CameraSystem" type="Node2D" parent="."]
z_index = 999
__meta__ = {
"_edit_lock_": true
}

[node name="Camera" parent="CameraSystem" instance=ExtResource( 2 )]

[node name="Map" type="Node2D" parent="."]
z_index = 2
z_as_relative = false
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Node2D" parent="Map"]
z_index = -10
z_as_relative = false
__meta__ = {
"_edit_lock_": true
}

[node name="Parallaxe" type="ParallaxBackground" parent="Map/Background"]
layer = -1
follow_viewport_enable = true
scroll_base_scale = Vector2( -1, -1 )

[node name="Back" type="ParallaxLayer" parent="Map/Background/Parallaxe"]
position = Vector2( 800, 0 )
motion_scale = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BGBase" type="Sprite" parent="Map/Background/Parallaxe/Back"]
modulate = Color( 1, 0.96, 0.96, 1 )
light_mask = 2
position = Vector2( -2330, -3040 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 5000, 5000 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lights" type="ParallaxLayer" parent="Map/Background/Parallaxe"]
motion_scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_lock_": true
}

[node name="Gears" type="ParallaxLayer" parent="Map/Background/Parallaxe"]
position = Vector2( 800, 0 )
motion_scale = Vector2( 0.3, 0.3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Gears" type="Sprite" parent="Map/Background/Parallaxe/Gears"]
modulate = Color( 1, 0.903333, 0.9, 1 )
light_mask = 2
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 6400, 3600 )
__meta__ = {
"_edit_lock_": true
}

[node name="ProdLine1" parent="Map/Background/Parallaxe" instance=ExtResource( 6 )]
position = Vector2( 0, 370 )
motion_scale = Vector2( 0.4, 0.4 )

[node name="ProdLine2" parent="Map/Background/Parallaxe" instance=ExtResource( 6 )]
position = Vector2( 0, 650 )
motion_scale = Vector2( 0.4, 0.4 )

[node name="Fog" type="ParallaxLayer" parent="Map/Background/Parallaxe"]
motion_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fog" type="Sprite" parent="Map/Background/Parallaxe/Fog"]
material = ExtResource( 21 )
position = Vector2( 470.01, 277.517 )
scale = Vector2( 2.09202, 1.27633 )
texture = ExtResource( 23 )
normal_map = ExtResource( 22 )
region_enabled = true
region_rect = Rect2( 0, 0, 3600, 3600 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="TileMap" parent="Map"]
z_index = 1
tile_set = ExtResource( 5 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( -524304, 13, 0, -1, 6, 0, -65536, 6, 1, -65535, 6, 1, -65534, 6, 1, -65533, 6, 1, -65532, 6, 1, -65531, 6, 1, -65530, 6, 1, -65529, 6, 1, -65528, 6, 1, -65527, 6, 1, -65526, 6, 1, -65525, 6, 1, -65524, 6, 1, -65523, 6, 1, -65522, 6, 1, -65521, 6, 1, -65520, 6, 1, -65519, 6, 1, -65518, 6, 1, -65517, 6, 1, -65516, 6, 1, -65515, 6, 1, -65514, 6, 1, -65513, 6, 1, -65512, 6, 1, -65511, 6, 1, -65510, 6, 1, -65509, 6, 1, -65508, 6, 1, -65507, 6, 1, -65506, 6, 1, -65505, 6, 1, -65504, 6, 1, -65503, 6, 1, -65502, 6, 1, -65501, 6, 1, -65500, 6, 1, -65499, 6, 1, -65498, 6, 1, -65497, 6, 2, 65535, 6, 65536, 0, 6, 131076, 1, 6, 131073, 2, 6, 131073, 3, 6, 131073, 4, 6, 131073, 5, 6, 131073, 6, 6, 131073, 7, 6, 131073, 8, 6, 131073, 9, 6, 131073, 10, 6, 131073, 11, 6, 131073, 12, 6, 131073, 13, 6, 131073, 14, 6, 131073, 15, 6, 131073, 16, 6, 131073, 17, 6, 131073, 18, 6, 131073, 19, 6, 131073, 20, 6, 131073, 21, 6, 131073, 22, 6, 131073, 23, 6, 131073, 24, 6, 131073, 25, 6, 131073, 26, 6, 131073, 27, 6, 131073, 28, 6, 131073, 29, 6, 131073, 30, 6, 131073, 31, 6, 131073, 32, 6, 131073, 33, 6, 131073, 34, 6, 131073, 35, 6, 131073, 36, 6, 131073, 37, 6, 131073, 38, 6, 131073, 39, 6, 65545, 131071, 6, 65536, 65536, 6, 65538, 65575, 6, 262145, 196607, 6, 65536, 131072, 6, 65538, 262143, 6, 65536, 196608, 6, 65538, 327679, 6, 65536, 262144, 6, 65538, 393215, 6, 65536, 327680, 6, 65538, 458751, 6, 65536, 393216, 6, 65538, 524287, 6, 65536, 458752, 6, 65538, 589823, 6, 65536, 524288, 6, 65538, 655359, 6, 65536, 589824, 6, 65538, 589863, 6, 196609, 720895, 6, 65536, 655360, 6, 65540, 655361, 6, 1, 655362, 6, 1, 655363, 6, 1, 655364, 6, 1, 655365, 6, 1, 655366, 6, 1, 655367, 6, 1, 655368, 6, 1, 655369, 6, 1, 655370, 6, 1, 655371, 6, 1, 655372, 6, 1, 655373, 6, 1, 655374, 6, 1, 655375, 6, 1, 655376, 6, 1, 655377, 6, 1, 655378, 6, 1, 655379, 6, 1, 655380, 6, 1, 655381, 6, 1, 655382, 6, 1, 655383, 6, 1, 655384, 6, 1, 655385, 6, 1, 655386, 6, 1, 655387, 6, 1, 655388, 6, 1, 655389, 6, 1, 655390, 6, 1, 655391, 6, 1, 655392, 6, 1, 655393, 6, 1, 655394, 6, 1, 655395, 6, 1, 655396, 6, 1, 655397, 6, 1, 655398, 6, 1, 655399, 6, 65543, 786431, 6, 65536, 720896, 6, 131076, 720897, 6, 131073, 720898, 6, 131073, 720899, 6, 131073, 720900, 6, 131073, 720901, 6, 131073, 720902, 6, 131073, 720903, 6, 131073, 720904, 6, 131073, 720905, 6, 131073, 720906, 6, 131073, 720907, 6, 131073, 720908, 6, 131073, 720909, 6, 131073, 720910, 6, 131073, 720911, 6, 131073, 720912, 6, 131073, 720913, 6, 131073, 720914, 6, 131073, 720915, 6, 131073, 720916, 6, 131073, 720917, 6, 131073, 720918, 6, 131073, 720919, 6, 131073, 720920, 6, 131073, 720921, 6, 131073, 720922, 6, 131073, 720923, 6, 131073, 720924, 6, 131073, 720925, 6, 131073, 720926, 6, 131073, 720927, 6, 131073, 720928, 6, 131073, 720929, 6, 131073, 720930, 6, 131073, 720931, 6, 131073, 720932, 6, 131073, 720933, 6, 131073, 720934, 6, 131073, 720935, 6, 65545, 851967, 6, 65536, 786432, 6, 65538, 786471, 6, 262145, 917503, 6, 65536, 851968, 6, 65538, 983039, 6, 65536, 917504, 6, 65538, 1048575, 6, 65536, 983040, 6, 65538, 1114111, 6, 65536, 1048576, 6, 65538, 1179647, 6, 65536, 1114112, 6, 65538, 1245183, 6, 65536, 1179648, 6, 65538, 1310719, 6, 65536, 1245184, 6, 65538, 1376255, 6, 65536, 1310720, 6, 65538, 1310759, 6, 196609, 1441791, 6, 65536, 1376256, 6, 65540, 1376257, 6, 1, 1376258, 6, 1, 1376259, 6, 1, 1376260, 6, 1, 1376261, 6, 1, 1376262, 6, 1, 1376263, 6, 1, 1376264, 6, 1, 1376265, 6, 1, 1376266, 6, 1, 1376267, 6, 1, 1376268, 6, 1, 1376269, 6, 1, 1376270, 6, 1, 1376271, 6, 1, 1376272, 6, 1, 1376273, 6, 1, 1376274, 6, 1, 1376275, 6, 1, 1376276, 6, 1, 1376277, 6, 1, 1376278, 6, 1, 1376279, 6, 1, 1376280, 6, 1, 1376281, 6, 1, 1376282, 6, 1, 1376283, 6, 1, 1376284, 6, 1, 1376285, 6, 1, 1376286, 6, 1, 1376287, 6, 1, 1376288, 6, 1, 1376289, 6, 1, 1376290, 6, 1, 1376291, 6, 1, 1376292, 6, 1, 1376293, 6, 1, 1376294, 6, 1, 1376295, 6, 65543, 1507327, 6, 131072, 1441792, 6, 131073, 1441793, 6, 131073, 1441794, 6, 131073, 1441795, 6, 131073, 1441796, 6, 131073, 1441797, 6, 131073, 1441798, 6, 131073, 1441799, 6, 131073, 1441800, 6, 131073, 1441801, 6, 131073, 1441802, 6, 131073, 1441803, 6, 131073, 1441804, 6, 131073, 1441805, 6, 131073, 1441806, 6, 131073, 1441807, 6, 131073, 1441808, 6, 131073, 1441809, 6, 131073, 1441810, 6, 131073, 1441811, 6, 131073, 1441812, 6, 131073, 1441813, 6, 131073, 1441814, 6, 131073, 1441815, 6, 131073, 1441816, 6, 131073, 1441817, 6, 131073, 1441818, 6, 131073, 1441819, 6, 131073, 1441820, 6, 131073, 1441821, 6, 131073, 1441822, 6, 131073, 1441823, 6, 131073, 1441824, 6, 131073, 1441825, 6, 131073, 1441826, 6, 131073, 1441827, 6, 131073, 1441828, 6, 131073, 1441829, 6, 131073, 1441830, 6, 131073, 1441831, 6, 131074 )
__meta__ = {
"_edit_lock_": true
}

[node name="Decoration" type="TileMap" parent="Map"]
z_index = 2
tile_set = ExtResource( 5 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( 917566, 536870922, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="ForeLights" type="Node2D" parent="Map"]
position = Vector2( 480, 272 )
__meta__ = {
"_edit_lock_": true
}

[node name="InteractivesObjects" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="IceBlocks" type="Node2D" parent="InteractivesObjects"]
__meta__ = {
"_edit_lock_": true
}

[node name="S" type="Node2D" parent="InteractivesObjects/IceBlocks"]
__meta__ = {
"_edit_lock_": true
}

[node name="M" type="Node2D" parent="InteractivesObjects/IceBlocks"]
__meta__ = {
"_edit_lock_": true
}

[node name="EarthBlocks" type="Node2D" parent="InteractivesObjects"]
__meta__ = {
"_edit_lock_": true
}

[node name="S" type="Node2D" parent="InteractivesObjects/EarthBlocks"]
__meta__ = {
"_edit_lock_": true
}

[node name="M" type="Node2D" parent="InteractivesObjects/EarthBlocks"]
__meta__ = {
"_edit_lock_": true
}

[node name="WaterTiles" type="Node2D" parent="InteractivesObjects"]
__meta__ = {
"_edit_lock_": true
}

[node name="LavaTiles" type="Node2D" parent="InteractivesObjects"]
__meta__ = {
"_edit_lock_": true
}

[node name="XionLiquid" type="Node2D" parent="InteractivesObjects"]
__meta__ = {
"_edit_lock_": true
}

[node name="TeleportGroups" type="Node2D" parent="InteractivesObjects"]
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons&Doors" type="Node2D" parent="InteractivesObjects"]
__meta__ = {
"_edit_lock_": true
}

[node name="GreatDoorGroup" type="Node2D" parent="InteractivesObjects"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="Node" parent="."]
script = ExtResource( 26 )

[node name="Normal" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 28 )
bus = "Music"

[node name="Medium" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 27 )
volume_db = -80.0
bus = "Music"

[node name="Hard" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 25 )
volume_db = -80.0
bus = "Music"
