[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/StartingPoints/StartingPointP2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/StartingPoints/StartingPointP1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Levels/Base/LevelBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Levels/Base/LevelBase.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Camera/CameraRemake.gd" type="Script" id=5]
[ext_resource path="res://Scenes/InteractiveObjects/Buttons&Doors/GroupBase.gd" type="Script" id=6]
[ext_resource path="res://Scenes/InteractiveObjects/Buttons&Doors/Door/ChildrenScenes/GreenDoor.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/InteractiveObjects/Buttons&Doors/Buttons/ChildrenScenes/GreenButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/InteractiveObjects/BreakableObjects/XionCrate/XionCrate.tscn" type="PackedScene" id=9]

[node name="Level2" instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="StartingPointP1" parent="." index="0" instance=ExtResource( 2 )]
position = Vector2( 48.8575, 276.525 )

[node name="StartingPointP2" parent="." index="1" instance=ExtResource( 1 )]
position = Vector2( 49.7067, 174.919 )

[node name="Sprite" parent="Foreground/TurnCloudL" index="0"]
frame = 1

[node name="Sprite" parent="Foreground/TurnCloudR" index="0"]
frame = 1

[node name="CameraSystem" parent="." index="4"]
visible = false

[node name="Camera" parent="CameraSystem" index="0"]
script = ExtResource( 5 )

[node name="Walls" parent="Map" index="1"]
tile_data = PoolIntArray( -1, 6, 3, -65536, 6, 65537, -65535, 6, 4, -65534, 6, 3, -65533, 6, 4, -65532, 6, 65537, -65531, 6, 3, -65530, 6, 4, -65529, 6, 65537, -65528, 6, 3, -65527, 6, 3, -65526, 6, 65537, -65525, 6, 4, -65524, 6, 3, -65523, 6, 3, -65522, 6, 4, -65521, 6, 65537, -65520, 6, 3, -65519, 6, 4, -65518, 6, 65537, -65517, 6, 3, -65516, 6, 3, -65515, 6, 3, -65514, 6, 3, -65513, 6, 3, -65512, 6, 4, -65511, 6, 4, -65510, 6, 3, -65509, 6, 65537, -65508, 6, 4, -65507, 6, 3, -65506, 6, 4, -65505, 6, 3, -65504, 6, 65537, -65503, 6, 65537, -65502, 6, 4, -65501, 6, 65537, -65500, 6, 3, -65499, 6, 4, -65498, 6, 65537, -65497, 6, 65537, 65535, 6, 65537, 0, 6, 4, 1, 6, 4, 2, 6, 65537, 3, 6, 65537, 4, 6, 4, 5, 6, 4, 6, 6, 4, 7, 6, 3, 8, 6, 3, 9, 6, 4, 10, 6, 3, 11, 6, 3, 12, 6, 3, 13, 6, 4, 14, 6, 4, 15, 6, 4, 16, 6, 65537, 17, 6, 3, 18, 6, 4, 19, 6, 4, 20, 6, 4, 21, 6, 3, 22, 6, 4, 23, 6, 4, 24, 6, 4, 25, 6, 65537, 26, 6, 4, 27, 6, 131076, 28, 6, 131073, 29, 6, 131073, 30, 6, 131073, 31, 6, 131073, 32, 6, 131073, 33, 6, 131073, 34, 6, 131073, 35, 6, 131073, 36, 6, 131073, 37, 6, 131073, 38, 6, 131073, 39, 6, 131075, 131071, 6, 65537, 65536, 6, 65537, 65537, 6, 65537, 65538, 6, 3, 65539, 6, 4, 65540, 6, 3, 65541, 6, 65537, 65542, 6, 4, 65543, 6, 3, 65544, 6, 3, 65545, 6, 4, 65546, 6, 4, 65547, 6, 3, 65548, 6, 3, 65549, 6, 4, 65550, 6, 3, 65551, 6, 3, 65552, 6, 65537, 65553, 6, 4, 65554, 6, 3, 65555, 6, 4, 65556, 6, 4, 65557, 6, 3, 65558, 6, 4, 65559, 6, 4, 65560, 6, 3, 65561, 6, 4, 65562, 6, 131076, 65563, 6, 131074, 65575, 6, 65536, 196607, 6, 65537, 131072, 6, 131076, 131073, 6, 131075, 131074, 6, 3, 131075, 6, 3, 131076, 6, 3, 131077, 6, 4, 131078, 6, 4, 131079, 6, 3, 131080, 6, 4, 131081, 6, 4, 131082, 6, 4, 131083, 6, 4, 131084, 6, 65537, 131085, 6, 3, 131086, 6, 3, 131087, 6, 3, 131088, 6, 4, 131089, 6, 4, 131090, 6, 4, 131091, 6, 65537, 131092, 6, 3, 131093, 6, 3, 131094, 6, 3, 131095, 6, 3, 131096, 6, 4, 131097, 6, 131076, 131098, 6, 131074, 131111, 6, 65536, 262143, 6, 65537, 196608, 6, 65538, 196609, 6, 131072, 196610, 6, 131075, 196611, 6, 4, 196612, 6, 4, 196613, 6, 4, 196614, 6, 65537, 196615, 6, 3, 196616, 6, 4, 196617, 6, 4, 196618, 6, 65537, 196619, 6, 4, 196620, 6, 3, 196621, 6, 3, 196622, 6, 4, 196623, 6, 3, 196624, 6, 4, 196625, 6, 65537, 196626, 6, 65537, 196627, 6, 4, 196628, 6, 3, 196629, 6, 3, 196630, 6, 3, 196631, 6, 3, 196632, 6, 131076, 196633, 6, 131074, 327679, 6, 4, 262144, 6, 65538, 262146, 6, 131072, 262147, 6, 131075, 262148, 6, 3, 262149, 6, 3, 262150, 6, 3, 262151, 6, 4, 262152, 6, 4, 262153, 6, 3, 262154, 6, 4, 262155, 6, 4, 262156, 6, 4, 262157, 6, 3, 262158, 6, 3, 262159, 6, 3, 262160, 6, 3, 262161, 6, 3, 262162, 6, 4, 262163, 6, 3, 262164, 6, 3, 262165, 6, 3, 262166, 6, 3, 262167, 6, 131076, 262168, 6, 131074, 393215, 6, 65537, 327680, 6, 65538, 327683, 6, 131072, 327684, 6, 131075, 327685, 6, 4, 327686, 6, 4, 327687, 6, 4, 327688, 6, 3, 327689, 6, 3, 327690, 6, 3, 327691, 6, 3, 327692, 6, 4, 327693, 6, 65537, 327694, 6, 4, 327695, 6, 3, 327696, 6, 4, 327697, 6, 3, 327698, 6, 65537, 327699, 6, 4, 327700, 6, 4, 327701, 6, 4, 327702, 6, 131076, 327703, 6, 131074, 458751, 6, 3, 393216, 6, 65538, 393220, 6, 131072, 393221, 6, 131073, 393222, 6, 131075, 393223, 6, 4, 393224, 6, 4, 393225, 6, 4, 393226, 6, 3, 393227, 6, 3, 393228, 6, 4, 393229, 6, 65537, 393230, 6, 4, 393231, 6, 3, 393232, 6, 4, 393233, 6, 3, 393234, 6, 3, 393235, 6, 4, 393236, 6, 131076, 393237, 6, 131073, 393238, 6, 131074, 524287, 6, 3, 458752, 6, 65538, 458758, 6, 131072, 458759, 6, 131073, 458760, 6, 131075, 458761, 6, 4, 458762, 6, 3, 458763, 6, 65537, 458764, 6, 65537, 458765, 6, 4, 458766, 6, 4, 458767, 6, 4, 458768, 6, 3, 458769, 6, 3, 458770, 6, 65537, 458771, 6, 4, 458772, 6, 65538, 589823, 6, 65537, 524288, 6, 65538, 524296, 6, 131072, 524297, 6, 131075, 524298, 6, 4, 524299, 6, 4, 524300, 6, 3, 524301, 6, 3, 524302, 6, 65537, 524303, 6, 4, 524304, 6, 3, 524305, 6, 4, 524306, 6, 3, 524307, 6, 4, 524308, 6, 65538, 655359, 6, 3, 589824, 6, 65538, 589825, 7, 65538, 589826, 7, 2, 589833, 6, 131072, 589834, 6, 131073, 589835, 6, 131073, 589836, 6, 131073, 589837, 6, 131073, 589838, 6, 131073, 589839, 6, 131073, 589840, 6, 131073, 589841, 6, 131073, 589842, 6, 131075, 589843, 6, 65537, 589844, 6, 65538, 589851, 6, 0, 589852, 6, 1, 589853, 6, 1, 589854, 6, 1, 589855, 6, 1, 589856, 6, 2, 589863, 6, 131075, 720895, 6, 4, 655360, 6, 65538, 655378, 6, 131072, 655379, 6, 131073, 655380, 6, 131074, 655386, 6, 0, 655387, 6, 65539, 655388, 6, 4, 655389, 6, 3, 655390, 6, 3, 655391, 6, 4, 655392, 6, 65540, 655393, 6, 2, 655399, 6, 65539, 786431, 6, 65537, 720896, 6, 65538, 720921, 6, 0, 720922, 6, 65539, 720923, 6, 4, 720924, 6, 4, 720925, 6, 4, 720926, 6, 4, 720927, 6, 4, 720928, 6, 4, 720929, 6, 65538, 851967, 6, 65537, 786432, 6, 65538, 786456, 6, 0, 786457, 6, 65539, 786458, 6, 4, 786459, 6, 4, 786460, 6, 4, 786461, 6, 65537, 786462, 6, 4, 786463, 6, 4, 786464, 6, 65537, 786465, 6, 65540, 786466, 6, 2, 917503, 6, 65537, 851968, 6, 65538, 851969, 7, 65538, 851970, 7, 2, 851971, 6, 0, 851972, 6, 1, 851973, 6, 1, 851974, 6, 1, 851975, 6, 2, 851976, 7, 65538, 851977, 7, 0, 851978, 7, 0, 851979, 7, 0, 851980, 7, 0, 851981, 15, 1, 851986, 6, 0, 851987, 6, 1, 851988, 6, 1, 851989, 6, 1, 851990, 6, 1, 851991, 6, 1, 851992, 6, 65539, 851993, 6, 4, 851994, 6, 4, 851995, 6, 4, 851996, 6, 3, 851997, 6, 3, 851998, 6, 4, 851999, 6, 4, 852000, 6, 4, 852001, 6, 4, 852002, 6, 65538, 983039, 6, 3, 917504, 6, 65538, 917507, 6, 65536, 917508, 6, 4, 917509, 6, 4, 917510, 6, 4, 917511, 6, 65538, 917517, 7, 65536, 917522, 6, 65536, 917523, 6, 3, 917524, 6, 4, 917525, 6, 4, 917526, 6, 65537, 917527, 6, 4, 917528, 6, 3, 917529, 6, 3, 917530, 6, 4, 917531, 6, 4, 917532, 6, 4, 917533, 6, 4, 917534, 6, 3, 917535, 6, 3, 917536, 6, 3, 917537, 6, 4, 917538, 6, 65540, 917539, 6, 2, 1048575, 6, 4, 983040, 6, 65538, 983043, 6, 65536, 983044, 6, 3, 983045, 6, 131076, 983046, 6, 131073, 983047, 6, 131074, 983053, 7, 65540, 983054, 7, 2, 983058, 6, 65536, 983059, 6, 4, 983060, 6, 3, 983061, 6, 4, 983062, 6, 4, 983063, 6, 3, 983064, 6, 3, 983065, 6, 4, 983066, 6, 4, 983067, 6, 65537, 983068, 6, 3, 983069, 6, 4, 983070, 6, 65537, 983071, 6, 4, 983072, 6, 3, 983073, 6, 4, 983074, 6, 4, 983075, 6, 65538, 1114111, 6, 4, 1048576, 6, 65538, 1048579, 6, 131072, 1048580, 6, 131073, 1048581, 6, 131074, 1048589, 7, 65536, 1048594, 6, 65536, 1048595, 6, 4, 1048596, 6, 65537, 1048597, 6, 3, 1048598, 6, 65537, 1048599, 6, 3, 1048600, 6, 4, 1048601, 6, 4, 1048602, 6, 3, 1048603, 6, 3, 1048604, 6, 3, 1048605, 6, 4, 1048606, 6, 4, 1048607, 6, 4, 1048608, 6, 4, 1048609, 6, 4, 1048610, 6, 4, 1048611, 6, 65540, 1048612, 6, 2, 1179647, 6, 4, 1114112, 6, 65538, 1114123, 7, 65538, 1114124, 7, 0, 1114125, 15, 65537, 1114129, 7, 1, 1114130, 6, 65536, 1114131, 6, 65537, 1114132, 6, 4, 1114133, 6, 4, 1114134, 6, 4, 1114135, 6, 3, 1114136, 6, 4, 1114137, 6, 3, 1114138, 6, 4, 1114139, 6, 4, 1114140, 6, 3, 1114141, 6, 4, 1114142, 6, 4, 1114143, 6, 3, 1114144, 6, 65537, 1114145, 6, 4, 1114146, 6, 4, 1114147, 6, 4, 1114148, 6, 65540, 1114149, 6, 2, 1245183, 6, 65537, 1179648, 6, 65538, 1179656, 7, 1, 1179664, 7, 65538, 1179665, 15, 65537, 1179666, 6, 65536, 1179667, 6, 4, 1179668, 6, 4, 1179669, 6, 65537, 1179670, 6, 4, 1179671, 6, 4, 1179672, 6, 3, 1179673, 6, 4, 1179674, 6, 4, 1179675, 6, 3, 1179676, 6, 4, 1179677, 6, 65537, 1179678, 6, 3, 1179679, 6, 3, 1179680, 6, 3, 1179681, 6, 65537, 1179682, 6, 4, 1179683, 6, 3, 1179684, 6, 4, 1179685, 6, 65538, 1310719, 6, 65537, 1245184, 6, 65538, 1245192, 7, 65537, 1245202, 6, 65536, 1245203, 6, 4, 1245204, 6, 4, 1245205, 6, 4, 1245206, 6, 4, 1245207, 6, 4, 1245208, 6, 3, 1245209, 6, 65537, 1245210, 6, 4, 1245211, 6, 4, 1245212, 6, 4, 1245213, 6, 4, 1245214, 6, 4, 1245215, 6, 3, 1245216, 6, 4, 1245217, 6, 4, 1245218, 6, 4, 1245219, 6, 65537, 1245220, 6, 3, 1245221, 6, 65540, 1245222, 6, 1, 1245223, 6, 2, 1376255, 6, 4, 1310720, 6, 65540, 1310721, 6, 1, 1310722, 6, 1, 1310723, 6, 1, 1310724, 6, 1, 1310725, 6, 1, 1310726, 6, 1, 1310727, 6, 1, 1310728, 6, 1, 1310729, 6, 1, 1310730, 6, 1, 1310731, 6, 1, 1310732, 6, 1, 1310733, 6, 1, 1310734, 6, 1, 1310735, 6, 1, 1310736, 6, 1, 1310737, 6, 1, 1310738, 6, 65539, 1310739, 6, 4, 1310740, 6, 65537, 1310741, 6, 65537, 1310742, 6, 3, 1310743, 6, 4, 1310744, 6, 4, 1310745, 6, 4, 1310746, 6, 3, 1310747, 6, 4, 1310748, 6, 3, 1310749, 6, 65537, 1310750, 6, 4, 1310751, 6, 4, 1310752, 6, 4, 1310753, 6, 3, 1310754, 6, 4, 1310755, 6, 65537, 1310756, 6, 3, 1310757, 6, 4, 1310758, 6, 4, 1310759, 6, 65538, 1441791, 6, 4, 1376256, 6, 4, 1376257, 6, 4, 1376258, 6, 4, 1376259, 6, 4, 1376260, 6, 4, 1376261, 6, 65537, 1376262, 6, 4, 1376263, 6, 4, 1376264, 6, 65537, 1376265, 6, 65537, 1376266, 6, 4, 1376267, 6, 4, 1376268, 6, 65537, 1376269, 6, 4, 1376270, 6, 3, 1376271, 6, 3, 1376272, 6, 3, 1376273, 6, 4, 1376274, 6, 3, 1376275, 6, 3, 1376276, 6, 4, 1376277, 6, 4, 1376278, 6, 4, 1376279, 6, 3, 1376280, 6, 4, 1376281, 6, 4, 1376282, 6, 4, 1376283, 6, 4, 1376284, 6, 3, 1376285, 6, 4, 1376286, 6, 4, 1376287, 6, 4, 1376288, 6, 4, 1376289, 6, 65537, 1376290, 6, 4, 1376291, 6, 4, 1376292, 6, 4, 1376293, 6, 4, 1376294, 6, 4, 1376295, 6, 65540, 1376296, 6, 1, 1376297, 6, 1, 1376298, 6, 1, 1376299, 6, 1, 1376300, 6, 1, 1376301, 6, 1, 1376302, 6, 1, 1376303, 6, 1, 1507327, 6, 3, 1441792, 6, 65537, 1441793, 6, 4, 1441794, 6, 65537, 1441795, 6, 3, 1441796, 6, 4, 1441797, 6, 65537, 1441798, 6, 4, 1441799, 6, 65537, 1441800, 6, 65537, 1441801, 6, 3, 1441802, 6, 4, 1441803, 6, 3, 1441804, 6, 3, 1441805, 6, 65537, 1441806, 6, 3, 1441807, 6, 3, 1441808, 6, 4, 1441809, 6, 65537, 1441810, 6, 65537, 1441811, 6, 3, 1441812, 6, 3, 1441813, 6, 4, 1441814, 6, 65537, 1441815, 6, 65537, 1441816, 6, 65537, 1441817, 6, 3, 1441818, 6, 65537, 1441819, 6, 3, 1441820, 6, 4, 1441821, 6, 3, 1441822, 6, 3, 1441823, 6, 65537, 1441824, 6, 65537, 1441825, 6, 4, 1441826, 6, 65537, 1441827, 6, 3, 1441828, 6, 3, 1441829, 6, 65537, 1441830, 6, 65537, 1441831, 6, 65537, 1441832, 6, 4, 1441833, 6, 4, 1441834, 6, 65537, 1441835, 6, 4, 1441836, 6, 4, 1441837, 6, 65537, 1441838, 6, 4, 1441839, 6, 65537 )

[node name="XionCrates" type="Node2D" parent="InteractivesObjects" index="0"]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="XionCrate" parent="InteractivesObjects/XionCrates" index="0" instance=ExtResource( 9 )]
position = Vector2( 288, 384 )

[node name="G1" type="Node2D" parent="InteractivesObjects/Buttons&Doors" index="0"]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="GreenButton" parent="InteractivesObjects/Buttons&Doors/G1" index="0" instance=ExtResource( 8 )]
position = Vector2( 64, 473 )

[node name="GreenDoor" parent="InteractivesObjects/Buttons&Doors/G1" index="1" instance=ExtResource( 7 )]
position = Vector2( 476, 288.546 )
